[package]
authors = ["Sean Bruton <sean@uberfoo.net>"]
name = "cryptonomicon"
version = "0.1.0"
description = "unified crypto library"
repository = "https://github.com/uber-foo/cryptonomicon"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "encryption", "signature", "pki", "certificate"]
categories = ["authentication", "cryptography"]

[dependencies]
failure = "0.1.2"
failure_derive = "0.1.2"

[features]
default = ["x509_v3"]
pki = []
x509 = ["pki"]
x509_v3 = ["x509"]
